# source-processing-scripts

./: .gitignore  .pypirc.example  FILE_FORMAT_SUPPORT.md  FILTERING_AND_SUBSETTING.md  FIX_UPLOAD.md  GITHUB_SETUP.md  GIT_SETUP.md  LICENSE  MANIFEST.in  OUTPUT_DIRECTORY.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  TROUBLESHOOTING.md  WINDOWS_CSV_FIX.md  config.yaml  pyproject.toml  run_aggregation.py  run_aggregation_with_config.py  run_cohort_analysis.py  test_aggregated_processing.py  test_large_dataset.py
docs/: DEPLOYMENT.md  GIT_PUSH_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  SCRIPTS_README.md  TUTORIAL_CHECKLIST.md  WINDOWS_COMMANDS.md  file_structure.md
sample_data/: cohort.csv  cohort.xlsx  diagnosis.csv  diagnosis.xlsx  enc.csv  enc.xlsx  iop.csv  iop.xlsx
scripts/: create_large_synthetic_data.py  create_sample_data.py  create_test_aggregated_data.py
src/patient_aggregator/: __init__.py  aggregator.py  cli.py  config_loader.py  data_cleaning.py  features.py  filter.py  statistical_plots.py  statistics.py  stratified_eda.py  summary_tables.py  visualizer.py
